// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dynadux Payloads with callbacks: After remove of 302 todo 1`] = `
Object {
  "logged": true,
  "saved": false,
  "todos": Array [
    Object {
      "done": false,
      "id": "301",
      "label": "Before work beers",
    },
  ],
}
`;

exports[`Dynadux Payloads with callbacks: First todos 1`] = `
Object {
  "logged": true,
  "saved": false,
  "todos": Array [
    Object {
      "done": false,
      "id": "301",
      "label": "Before work beers",
    },
    Object {
      "done": false,
      "id": "302",
      "label": "After work beers",
    },
  ],
}
`;

exports[`Dynadux Payloads with callbacks: Initial state 1`] = `
Object {
  "logged": false,
  "saved": false,
  "todos": Array [],
}
`;
